tree-sitter-dowe/test/corpus/views.txt
==================
Theme design theme
==================

theme
  fonts default:"inter" install:["inter"]
  design defaultTheme:"light"
    Card variant:"outline" scheme:"primary" radius:"xs" shadow:"xs"
    Button variant:"solid" scheme:"secondary" size:"md"
    Avatar radius:"full" size:"md"
    Chip variant:"soft" scheme:"secondary" radius:"full" size:"sm"
    theme name:"light"
      colors:
        primary color:"#6bc670" text:"#26201f" title:"#26201f"

main
  app name:"Clinic Desk" bundle:"com.example.clinic"
  views viewRoutes
  server port:8080
    endpoints apiRoutes

---

(source_file
  (node_line
    (line_name
      (block_keyword)))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (array
            (value
              (string)))))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (suite_marker)))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (root_keyword)))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (number)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (value
        (property_name)))))

==================
Layout bars
==================

layout AuthLayout
  AppBar variant:"soft" scheme:"surface" position:"fixed" bordered:true boxed:true floating:true dockOnScroll:true
    start
      Text
        "Dowe"
    center
      Text
        "Auth"
    end
      Button href:"/blogs"
        "Blogs"
  Footer scheme:"background"
    start
      Text
        "Legal"
  BottomBar bordered:true
    tab href:"/home" label:"Home"
      Icon name:"home"
    tab href:"/create" label:"Create" featured:true
      Icon name:"add-circle"

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (boolean))))
    (line_item
      (prop
        (property_name)
        (value
          (boolean))))
    (line_item
      (prop
        (property_name)
        (value
          (boolean))))
    (line_item
      (prop
        (property_name)
        (value
          (boolean)))))
  (node_line
    (line_name
      (block_keyword)))
  (node_line
    (line_name
      (component_name)))
  (text_line
    (text_token
      (string)))
  (node_line
    (line_name
      (block_keyword)))
  (node_line
    (line_name
      (component_name)))
  (text_line
    (text_token
      (string)))
  (node_line
    (line_name
      (block_keyword)))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (text_line
    (text_token
      (string)))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (block_keyword)))
  (node_line
    (line_name
      (component_name)))
  (text_line
    (text_token
      (string)))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (boolean)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (boolean)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))))

==================
Brand identity
==================

page brandPage
  Brand href:"/" label:"Dowe home" w:32 h:8
    Svg viewBox:"0 0 128 32" w:"full" h:"full"
      Path d:"M2 2H18V30H2Z" fill:"primary"

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))
    (line_item
      (prop
        (property_name)
        (value
          (number)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))))

==================
Svg paths and children
==================

layout AuthLayout
  Box
    children

page loginPage
  Svg viewBox:"0 0 24 24" color:"tertiary" w:8 h:8
    Path d:"M0 0h24v24H0z" fill:"none"
    Path fill:"currentColor" fillRule:"evenodd" d:"M22 12c0-5.523-4.477-10-10-10"
  Svg data:iconData w:8 h:8

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name)))
  (node_line
    (line_name
      (block_keyword)))
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))
    (line_item
      (prop
        (property_name)
        (value
          (number)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))))

=================================
Media display and form components
=================================

page componentsPage
  Audio src:"https://example.com/audio.mp3" scheme:"primary"
  Camera facing:"user" label:"Take photo"
  Microphone label:"Record audio" maxDuration:30
  Accordion multiple:true
    item id:"intro" label:"Intro"
      Text
        "Body"
  Carousel title:"Slides"
    slide id:"one"
      Text
        "Slide"
  Checkbox bind:accepted label:"Accept"
  Color bind:themeColor value:"#3366ff"
  Date bind:shipDate value:"2026-06-05"
  DateRange start:startDate end:endDate
  RadioGroup bind:plan
    item value:"basic" label:"Basic"
  Toggle bind:accepted label:"Enabled"

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (number)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (boolean)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name)))
  (text_line
    (text_token
      (string)))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name)))
  (text_line
    (text_token
      (string)))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (property_name)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (property_name)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))))

==================
Tabs
==================

page accountPage
  Tabs position:"top"
    tab id:"overview" label:"Overview"
      Text
        "Overview"
    tab id:"activity" label:"Activity"
      Text
        "Activity"

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name)))
  (text_line
    (text_token
      (string)))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name)))
  (text_line
    (text_token
      (string))))

=======================
Whitespace-separated arrays
=======================

main
  views:[siteRoutes docsRoutes]

---

(source_file
  (node_line
    (line_name
      (root_keyword)))
  (node_line
    (line_name
      (root_keyword))
    (value
      (array
        (value
          (property_name))
        (value
          (property_name))))))

========================
Form validation entries
========================

page ContactPage
  Input bind:form.email helpText:"Use your work email"
    validate rule:"required" message:"Email is required"

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (reference))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))))

=======================
Multiline visual props
=======================

page shellPage
  AppBar:
    position:"sticky"
    floating:true
    boxed:true
    bordered:true
    variant:"soft"
    scheme:"surface"
    rounded:"full"
    border:1
    borderColor:"muted"
    shadow:"lg"
    shadowColor:"muted"
    start
      Text
        "Brand"

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (suite_marker)))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (value
          (string)))))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (type_reference))))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (type_reference))))
  (code_property_line
    (property_name)
    (value
      (boolean)))
  (code_property_line
    (property_name)
    (value
      (string)))
  (code_property_line
    (property_name)
    (value
      (string)))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (value
          (string)))))
  (code_property_line
    (property_name)
    (value
      (number)))
  (code_property_line
    (property_name)
    (value
      (string)))
  (code_property_line
    (property_name)
    (value
      (string)))
  (code_property_line
    (property_name)
    (value
      (string)))
  (node_line
    (line_name
      (block_keyword)))
  (node_line
    (line_name
      (component_name)))
  (text_line
    (text_token
      (string))))

=======================
Interactive view motion
=======================

page MotionPage
  Chip rotate:-7 scale:1.05 translateX:-1.5 translateY:{ xs:0 md:2 } transition:"spring" gesture:"lift" animation:"slideRight" onClick:selectChip
    "Mobile Apps"

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (number))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (number)))
            (object_entry
              (property_name)
              (value
                (number)))))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (property_name)))))
  (text_line
    (text_token
      (string))))

==================
Stepper
==================

page onboardingPage
  Stepper scheme:"primary" orientation:"horizontal"
    step id:"account" label:"Account"
      Text
        "Account"

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (component_name)))
  (text_line
    (text_token
      (string))))

==================
Table
==================

page usersPage
  signal users value:[]
  Table data:users variant:"soft" scheme:"surface" size:"lg" striped:true
    column field:"name" label:"Name"
    column field:"status" label:"Status" align:"end" width:"8rem"

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (array)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (boolean)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string)))))
  (node_line
    (line_name
      (block_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))))

==================
Candlestick
==================

page marketPage
  signal candles value:[]
  Candlestick data:candles stream:"/api/candles" variant:"soft" scheme:"surface" upColor:"success" downColor:"danger" maxPoints:120

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (array)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (number))))))

==================
Translations
==================

translations default:true
  home
    hero
      title "Dowe builds systems."

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (prop
        (property_name)
        (value
          (boolean)))))
  (text_line
    (text_token
      (identifier)))
  (text_line
    (text_token
      (identifier)))
  (text_line
    (text_token
      (identifier))
    (text_token
      (string))))

==================
Drawer
==================

page drawerPage
  signal drawerOpen value:false
  Drawer open:drawerOpen position:"start" variant:"soft" scheme:"surface" show:{ xs:true md:false }
    Text
      "Navigation"

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (fn_keyword))
    (line_item
      (value
        (property_name)))
    (line_item
      (prop
        (property_name)
        (value
          (boolean)))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (prop
        (property_name)
        (value
          (property_name))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (string))))
    (line_item
      (prop
        (property_name)
        (value
          (object
            (object_entry
              (property_name)
              (value
                (boolean)))
            (object_entry
              (property_name)
              (value
                (boolean))))))))
  (node_line
    (line_name
      (component_name)))
  (text_line
    (text_token
      (string))))

==================
Code blocks
==================

page docsPage
  Code:
    language:"dowe"
    scheme:"surface"
    content:"""
      page docsPage
        Text
          "Documentation"
    """

---

(source_file
  (node_line
    (line_name
      (root_keyword))
    (line_item
      (value
        (property_name))))
  (node_line
    (line_name
      (component_name))
    (line_item
      (suite_marker)))
  (node_line
    (line_name
      (type_field
        (type_field_key
          (type_field_name))
        (value
          (string)))))
  (code_property_line
    (property_name)
    (value
      (string)))
  (code_property_line
    (property_name)
    (value
      (multiline_string))))

==================
Advanced form controls
==================

page advancedForms
  ComboBox label:"Role" placeholder:"Choose role" value:"admin" clearable:true
    comboOption value:"admin" label:"Admin" description:"Full access"
    comboOption value:"editor" label:"Editor"
  CsvField label:"Import users" buttonText:"Upload CSV"
    csvColumn name:"email" label:"Email"
  DragDrop label:"Tasks" direction:"horizontal"
    dragItem id:"todo" label:"Todo"
    dragGroup id:"done" title:"Done"
      dragItem id:"ship" label:"Ship"
  Editor label:"Notes" placeholder:"Write notes" minHeight:180
  ImageCropper label:"Avatar" shape:"circle"
  Password label:"Password" hideStrength:false
  Phone label:"Phone" country:"US"
  Pin label:"Code" length:6
  Textarea label:"Bio" rows:4 maxLength:160

---
